fix: layout issue in card component

--- a/Components/Cards/cards.css
+++ b/Components/Cards/cards.css
@@ -19,6 +19,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .card-title {
